force-app/main/default/objects/smagicinteract__smsMagic__c/fields/doctor__c.field-meta.xml
<CustomField>
    <fullName>doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doctor</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>SMS History</relationshipLabel>
    <relationshipName>smsmagics</relationshipName>
    <type>Lookup</type>
</CustomField>