force-app/main/default/objects/smagicinteract__smsMagic__c/fields/result__c.field-meta.xml
<CustomField>
    <fullName>result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Result</label>
    <referenceTo>Result__c</referenceTo>
    <relationshipLabel>SMS History</relationshipLabel>
    <relationshipName>smsmagics</relationshipName>
    <type>Lookup</type>
</CustomField>