force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__Message_Type__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Message_Type__c</fullName>
    <description>This field contains the message type. The type can be: SMS or MMS.</description>
    <label>Message Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMS</fullName>
                <default>true</default>
                <label>SMS</label>
            </value>
            <value>
                <fullName>MMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>