force-app/main/default/objects/smagicinteract__smsMagic__c/listViews/smagicinteract__All.listView-meta.xml
<ListView>
    <fullName>smagicinteract__All</fullName>
    <columns>NAME</columns>
    <columns>smagicinteract__SenderId__c</columns>
    <columns>smagicinteract__Status__c</columns>
    <columns>smagicinteract__statusMessage__c</columns>
    <columns>smagicinteract__PhoneNumber__c</columns>
    <columns>smagicinteract__Name__c</columns>
    <columns>smagicinteract__SMSText__c</columns>
    <columns>smagicinteract__ObjectType__c</columns>
    <columns>smagicinteract__CreatedOn__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>smagicinteract__Direction__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>